<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>
  <string name="application_title">ASE</string>
  <string name="application_nice_title">Android Scripting Environment</string>
  <string name="wiki_url">http://code.google.com/p/android-scripting/wiki/TableOfContents?tm=6</string>
  <string name="youtube_url">http://www.youtube.com/view_play_list?p=07A81E6CE96F158B</string>
  <string name="text_preferences">Text</string>
  <string name="title_fontsize_preference">Font size</string>
  <string name="summary_fontsize_preference">Choose character height in pixels.</string>
  <string name="dialog_title_fontsize_preference">Font size</string>
  <string name="title_color_preference">Colors</string>
  <string name="summary_color_preference">Choose text color.</string>
  <string name="dialog_title_color_preference">Text color</string>
  <string name="keyboard_preferences">Keyboard</string>
  <string name="title_controlkey_preference">Control key</string>
  <string name="summary_controlkey_preference">Choose control key.</string>
  <string name="dialog_title_controlkey_preference">Control key</string>
  <string name="shell_preferences">Shell</string>
  <string name="title_shell_preference">Command line</string>
  <string name="summary_shell_preference">Specify the shell command line.</string>
  <string name="dialog_title_shell_preference">Shell</string>
  <string name="title_initialcommand_preference">Initial command</string>
  <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
  <string name="dialog_title_initialcommand_preference">Initial Command</string>
  <string name="default_value_fontsize_preference">10</string>
  <string name="default_value_color_preference">1</string>
  <string name="default_value_controlkey_preference">0</string>
  <string name="no_scripts_message">Start adding scripts and interpreters by pressing the menu button.</string>
  <string name="notification_action_message">Tap to open Script Monitor.</string>
  <string name="no_running_scripts_message">There are no currently running scripts.</string>
  <string name="script_number_message">Number of running scripts:\t</string>
<string name="no_triggers_message">No triggers.</string>
<string name="no_bluetooth_devices_message">No bluetooth devices found.</string>
</resources>
